--- a/views/tagged.erb
+++ b/views/tagged.erb
@@ -1,5 +1,7 @@
+<h2>Schedules with Tag: <%=tag%></h2>
 <% schedules.each do |schedule|%>
   <p><%=schedule.linked_tags%></p>
   <p><%=schedule.body%></p>
   <a href="<%= schedule.url%>">more</a>
 <% end %>
+
