now the frontend uses the new functionality like the parser, new schedules view
Signed-off-by: Eger Andreas <andreas.eger.reg@googlemail.com>

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -463,3 +463,26 @@ html > body {
   list-style-type: none;
   margin-left: 0px;
 }
+
+/* line 41, ../../style/screen.sass */
+.items {
+  list-style: none;
+  padding-left: 10px;
+  margin-left: 30px;
+  font-size: 1.1em;
+  font-family: monospace;
+}
+/* line 11, ../../../../.rvm/gems/ree-1.8.7-2011.01@ssched/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/utilities/lists/_bullets.scss */
+.items li {
+  list-style-image: none;
+  list-style-type: none;
+  margin-left: 0px;
+}
+/* line 48, ../../style/screen.sass */
+.items .level1 {
+  margin-left: 1.3em;
+}
+/* line 50, ../../style/screen.sass */
+.items .level2 {
+  margin-left: 2.6em;
+}
