--- a/style/screen.sass
+++ b/style/screen.sass
@@ -38,3 +38,15 @@
   position: absolute
   top: 1em
   right: 1em
+.items
+  +no-bullets
+  padding-left: 10px
+  margin-left: 30px
+  font-size: 1.1em
+  font-family: monospace
+  .level0
+  .level1
+    margin-left: 1.3em
+  .level2
+    margin-left: 2.6em
+
