--- a/views/edit.haml
+++ b/views/edit.haml
@@ -1,3 +1,4 @@
+-title 'Create/Edit Schedule', false
 :erb
   <form action="<%= url %>" method="post" name="edit" id="schedule_edit">
     <p class="meta"><input type="text" name="tags" value="<%= schedule.tags %>" /></p>
