--- a/style/screen.sass
+++ b/style/screen.sass
@@ -12,7 +12,7 @@
 // or @extend it to apply multiple containers on your site.
 #content
   +container
-  +show-grid("grid.png")
+  //+show-grid("grid.png")
 
 // show-grid loads a 64+16x24 grid image by default
 // For other grid settings, run `compass grid-img 30+10x20`
@@ -33,11 +33,18 @@
   background-color: #ffcccc
   border: solid 1px #cc6666
 
-#nav
+#nav,
+#tags
   +no-bullets
   position: absolute
-  top: 1em
+  top: 0.5em
   right: 1em
+
+#tags
+  text-align: right
+  top: 4em
+  font-size: 70%
+
 .items
   +no-bullets
   padding-left: 10px
