--- a/views/list.haml
+++ b/views/list.haml
@@ -1,3 +1,4 @@
+- title 'List', false
 - schedules.each do |schedule|
   %small
     =schedule.linked_tags
@@ -9,6 +10,6 @@
       with
       = schedule.items
       = pluralize(schedule.items, 'Item')
-  %p
+    %br
     %a(href="#{schedule.url}")more
 
