tagcount, schedule editing
Signed-off-by: Eger Andreas <andreas.eger.reg@googlemail.com>

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -492,3 +492,8 @@ html > body {
 .items .level2 {
   margin-left: 2.6em;
 }
+
+/* line 61, ../../style/screen.sass */
+a:focus {
+  outline: none;
+}
