--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,26 +1,63 @@
 !!! 5
-%html
-  %head
-    %title
-      = "Schedules - " << (section(:title) || "Untitled")
-    %link(rel="stylesheet" href="/css/screen.css")  
-  %body
-    - [:error, :notice].each do |name|
-      - unless flash[name].nil? 
-        %div{:id => "flash_#{name}"}=flash[name]
-    %ul#nav
-      %li
-        %a(href="/new")new schedule
-    %ul#tags
-      - all_tags.each do |tag|
-        %li
-          %a(href="/tags/#{tag[0]}")
-            =tag[0]
-          ="-"
-          =tag[1]
-    %div#content
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ --> 
+<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+%head
+  %meta{:charset=>"utf-8"}
+
+  <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
+  Remove this if you use the .htaccess -->
+  -#%meta{:"http-equiv"=>"X-UA-Compatible", :content=>"IE=edge,chrome=1"}
+
+  %title
+    = "Schedules - " << (section(:title) || "Untitled")
+  %meta{:name=>"description", :content=>"Sinatra app to store and share swim schedules"}
+  %meta{:name=>"author", :content=>"sch1zo"}
+
+  <!--  Mobile viewport optimized: j.mp/bplateviewport -->
+  %meta{:name=>"viewport", :content=>"width=device-width, initial-scale=1.0"}
+
+  <!-- Place favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
+  %link{:rel=>"shortcut icon", :href=>"/favicon.ico"}
+  %link{:rel=>"apple-touch-icon", :href=>"/apple-touch-icon.png"}
+
+
+  <!-- CSS : implied media="all" -->
+  %link{:rel=>"stylesheet", :href=>"/css/screen.css"}
+
+  <!-- Uncomment if you are specifically targeting less enabled mobile browsers
+  <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
+ 
+  <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects 
+  <script src="js/libs/modernizr-1.6.min.js"></script> -->
+
+
+%body
+  #container
+    %header
       - if show_title?
-        %h2= section(:title)
+        %h1= section(:title)
+    #sidebar
+      %nav
+        %ul
+          %li
+            %a(href="/new")new schedule
+          %li
+            %a(href="/")show all
+      %ul#tagcloud
+        -# tag_cloud %w(xxs xs s l xl xxl) do |tag, css_class|
+          %li
+            %a{:href=>"/tags/#{tag}", :class=>"#{css_class}"}=tag
+    %div{:role=>"main"}
+      - [:error, :notice].each do |name|
+        - unless flash[name].nil? 
+          %div{:id => "flash_#{name}"}=flash[name]
       = yield
-      %p
-        %a(href="/") show all
+
+    %footer
+      sch1zo | Source at
+      %a{:rel=>"source", :href=>"https://github.com/sch1zo/schedule-db-redis"}
+        GitHub
