--- a/views/layout.haml
+++ b/views/layout.haml
@@ -31,8 +31,8 @@
   <!-- Uncomment if you are specifically targeting less enabled mobile browsers
   <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
  
-  <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects 
-  <script src="js/libs/modernizr-1.6.min.js"></script> -->
+  <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects  -->
+  %script{:src=>"js/modernizr-1.7.min.js"}
 
 
 %body
