--- a/views/layout.haml
+++ b/views/layout.haml
@@ -32,7 +32,7 @@
   <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
  
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects  -->
-  %script{:src=>"js/modernizr-1.7.min.js"}
+  %script{:src=>"/js/modernizr-1.7.min.js"}
 
 
 %body
