--- a/style/screen.sass
+++ b/style/screen.sass
@@ -58,6 +58,9 @@ div[role="main"]
   .schedule
     border:
       bottom: solid
+    .controls
+      float: left
+      padding-right: .4em
     .items
       +no-bullets
       +adjust-font-size-to(18px)
