--- a/views/layout.haml
+++ b/views/layout.haml
@@ -61,3 +61,9 @@
       sch1zo | Source at
       %a{:rel=>"source", :href=>"https://github.com/sch1zo/schedule-db-redis"}
         GitHub
+  <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
+  %script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"}
+  %script
+    :plain
+      !window.jQuery && document.write(unescape('%3Cscript src="/js/jquery-1.5.1.min.js"%3E%3C/script%3E'))
+  %script{:src=>"/js/script.js"}
