--- a/views/layout.haml
+++ b/views/layout.haml
@@ -47,6 +47,12 @@
             %a(href="/new")new schedule
           %li
             %a(href="/")show all
+      %ul#auth
+        Sign in with
+        %li
+          %a{:href=>'/auth/twitter'}Twitter
+        %li
+          %a{:href=>'/auth/facebook'}Facebook
       %ul#tagcloud
         -# tag_cloud %w(xxs xs s l xl xxl) do |tag, css_class|
           %li
