fixed the flash issue, not exactly sure what the problem was removed redirect_with_flash and enables session before Rack::Flash
Signed-off-by: sch1zo <andreas.eger.reg@googlemail.com>

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -58,7 +58,7 @@
           %li
             %a{:href=>"/tags/#{tag}", :class=>"#{css_class}"}=tag
     %div{:role=>"main"}
-      - [:error, :notice].each do |name|
+      - ['error', 'notice'].each do |name|
         - unless flash[name].nil? 
           %div{:id => "flash_#{name}"}=flash[name]
       = yield
